# cs153project

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 57aa7175ab20_backtests.py  66f3e7f60c8f_bars_and_features.py  725c8bc1940a_equity_snapshots.py  918a71797f7c_regime_models_and_regimes.py  a2d164d4c211_baseline_users.py  b7c1a2d3e4f5_alerts.py  c21051da23ec_execution_orders_fills_positions.py  dfa9b5d80182_proposals_and_token_usage.py  e08b41212e8b_strategies_and_versions.py  fd38e0d3efff_risk_events.py
backend/app/: demo.py  main.py  seed.py  worker.py
backend/app/api/: alerts.py  deps.py  health.py  proposals.py  regimes.py  risk.py  schemas.py  settings.py  strategies.py  ws.py
backend/app/core/: config.py  logging.py  paper_lock.py
backend/app/db/: session.py  types.py
backend/app/engine/alerts/: __init__.py  service.py
backend/app/engine/backtest/: service.py  walkforward.py
backend/app/engine/data/: market_hours.py  service.py  sources.py  stream.py
backend/app/engine/execution/: alpaca.py  base.py  router.py  simulator.py
backend/app/engine/features/: engineering.py  indicators.py
backend/app/engine/learning/: budget.py  feedback.py  llm.py  service.py
backend/app/engine/loop/: orchestrator.py  rebalance.py
backend/app/engine/performance/: metrics.py
backend/app/engine/regime/: hmm.py  service.py  stability.py
backend/app/engine/risk/: limits.py  manager.py
backend/app/engine/strategies/: evaluator.py  service.py  spec.py
backend/app/models/: __init__.py  account.py  alert.py  backtest.py  execution.py  market.py  proposal.py  regime.py  risk.py  strategy.py  user.py
backend/app/services/: users.py
backend/tests/: conftest.py  factories.py  test_alerts.py  test_api.py  test_backtest.py  test_db.py  test_e2e.py  test_execution.py  test_features.py  test_learning.py  test_market_data.py  test_market_hours.py  test_orchestrator.py  test_performance.py  test_regime.py  test_risk.py  test_strategy.py
deploy/: crontab.example  docker-compose.override.yml  paper-report-cron.sh  reconcile-cron.sh  setup-vm.sh  trading-bot.service
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: ui.tsx
frontend/lib/: api.ts  format.test.ts  format.ts  types.ts
scripts/: paper_report.py  preflight.py  reconcile.py  run_paper_bot.py  run_tournament.py  seed_bars.py
src/: __init__.py  config.py  logging.py
src/backtest/: __init__.py  data_loader.py  montecarlo.py  tournament.py  vectorbt_runner.py  walkforward.py
src/broker/: __init__.py  alpaca.py  base.py  simulated.py
src/execution/: __init__.py  order_manager.py  signal_producer.py
src/metrics/: __init__.py  live.py
src/persistence/: __init__.py  db.py  models.py  repos.py
tests/: conftest.py
(+33 files in other folders)
