[project]
name = "trading-bot"
version = "0.1.0"
description = "AI-driven paper trading bot for US equities with LLM-orchestrated strategies and reflection-based self-improvement."
requires-python = ">=3.11,<3.14"
readme = "README.md"

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "pendulum>=3.0",

    # Data / numeric
    "pandas>=2.2",
    "numpy>=2.0",

    # Broker + market data
    "alpaca-py>=0.30",
    "yfinance>=0.2.40",

    # Persistence
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "redis>=5.0",

    # LLM
    "anthropic>=0.39",

    # Indicators / backtest (Phase 1 — installed now so deps resolve once)
    "pandas-ta-classic>=0.4",
    "vectorbt>=0.28",

    # Scheduling / API / UI
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.35",

    # CLI
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
ignore = [
    "E501",
    # `(str, Enum)` is the established Python idiom for string-valued enums and
    # interops cleanly with SQLAlchemy's `values_callable`. StrEnum changes
    # `str(member)` semantics (returns the value, not "Class.MEMBER"); not worth
    # the audit. Revisit if Python deprecates the multi-inheritance form.
    "UP042",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

# Third-party libs that don't ship type stubs. Don't fail on imports we can't
# meaningfully check; we still lose downstream inference inside their call sites.
[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "vectorbt",
    "vectorbt.*",
    "yfinance",
    "yfinance.*",
    "apscheduler.*",
    "pandas_ta_classic",
    "pandas_ta_classic.*",
]
ignore_missing_imports = true
