[project]
name = "regime-trader-backend"
version = "0.1.0"
description = "Self-learning regime-aware trading web app — backend"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses these as call-in-default-argument by design.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Form",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
